testsuite/tests/interpreter_errors/combine_recurs_to_invalid_type/test.out
script.lkql:2:7: error: Unsupported operation: Int & Int
2 | print({a: 1}.combine({a: 2}))
  |       ^^^^^^^^^^^^^^^^^^^^^^
 in combine (called at script.lkql:2:7)
